kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-taget: /
spec:
  rules:
  - host: boaz-pin.com
  - http:
      paths:
      - path: /news_service
        backend:
          serviceName: news_service
          servicePort: 8080
      - path: /similarity_service
        backend:
          serviceName: similarity_service
          servicePort: 5000
